syntax = "proto3";
package akash.market.v1beta1;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/ovrclk/akash/x/market/types";

// LeaseID stores bid details of lease
message LeaseID {
  option (gogoproto.equal)            = true;
  option (gogoproto.goproto_stringer) = false;

  bytes owner = 1 [
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress",
    (gogoproto.jsontag)  = "owner",
    (gogoproto.moretags) = "yaml:\"owner\""
  ];
  uint64 dseq = 2
      [(gogoproto.customname) = "DSeq", (gogoproto.jsontag) = "dseq", (gogoproto.moretags) = "yaml:\"dseq\""];
  uint32 gseq = 3
      [(gogoproto.customname) = "GSeq", (gogoproto.jsontag) = "gseq", (gogoproto.moretags) = "yaml:\"gseq\""];
  uint32 oseq = 4
      [(gogoproto.customname) = "OSeq", (gogoproto.jsontag) = "oseq", (gogoproto.moretags) = "yaml:\"oseq\""];
  bytes provider = 5 [
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress",
    (gogoproto.jsontag)  = "provider",
    (gogoproto.moretags) = "yaml:\"provider\""
  ];
}

// Lease stores LeaseID, state of lease and price
message Lease {
  option (gogoproto.equal)            = false;
  option (gogoproto.goproto_stringer) = false;

  LeaseID lease_id = 1 [
    (gogoproto.customname) = "LeaseID",
    (gogoproto.nullable)   = false,
    (gogoproto.jsontag)    = "id",
    (gogoproto.moretags)   = "yaml:\"id\""
  ];

  // State is an enum which refers to state of lease
  enum State {
    option (gogoproto.goproto_enum_prefix) = false;

    // Prefix should start with 0 in enum. So declaring dummy state
    invalid = 0 [(gogoproto.enumvalue_customname) = "LeaseStateInvalid"];
    // LeaseActive denotes state for lease active
    active = 1 [(gogoproto.enumvalue_customname) = "LeaseActive"];
    // LeaseInsufficientFunds denotes state for lease insufficient_funds
    insufficient_funds = 2 [(gogoproto.enumvalue_customname) = "LeaseInsufficientFunds"];
    // LeaseClosed denotes state for lease closed
    closed = 3 [(gogoproto.enumvalue_customname) = "LeaseClosed"];
  }

  State                    state = 2 [(gogoproto.jsontag) = "state", (gogoproto.moretags) = "yaml:\"state\""];
  cosmos.base.v1beta1.Coin price = 3
      [(gogoproto.nullable) = false, (gogoproto.jsontag) = "price", (gogoproto.moretags) = "yaml:\"price\""];
}

// LeaseFilters defines flags for lease list filter
message LeaseFilters {
  option (gogoproto.equal) = false;

  bytes owner = 1 [
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress",
    (gogoproto.jsontag)  = "owner",
    (gogoproto.moretags) = "yaml:\"owner\""
  ];
  uint64 dseq = 2
      [(gogoproto.customname) = "DSeq", (gogoproto.jsontag) = "dseq", (gogoproto.moretags) = "yaml:\"dseq\""];
  uint32 gseq = 3
      [(gogoproto.customname) = "GSeq", (gogoproto.jsontag) = "gseq", (gogoproto.moretags) = "yaml:\"gseq\""];
  uint32 oseq = 4
      [(gogoproto.customname) = "OSeq", (gogoproto.jsontag) = "oseq", (gogoproto.moretags) = "yaml:\"oseq\""];
  bytes provider = 5 [
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress",
    (gogoproto.jsontag)  = "provider",
    (gogoproto.moretags) = "yaml:\"provider\""
  ];
  string state = 6 [(gogoproto.jsontag) = "state", (gogoproto.moretags) = "yaml:\"state\""];
}
